@@ -55,6 +55,7 @@
 * Dlocal: Format 3DS mpi enrollment data correctly [cristian] #4371
 * Airwallex: QA fixes for option handling [therufs] #4367
 * CardConnect: Fixed duplicate(concat) Address sent - card_connect is concat. address1 and 2 causing a AVS error [ahmirza] #4362
+* CyberSource: Remove Pinless Debit Transaction Functionality [peteroas] #4370
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
